<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ursäkter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_randomization">Randomization</string>
    <string name="main_button">Slumpa ursäkt</string>
    <string name="main_title">150+ Ursäkter till att komma försent</string>
    <string name="start_text">Ursäkta att jag är sen...</string>
    <string name="favBtn_text">Favoriter</string>
    <string name="catBtn_text">Bibliotek</string>
    <string name="addBtn_text">Lägg till</string>
    <string name="setBtn_text">Ställ in</string>
    <string name="aboutBtn_text">Om...</string>
    <string name="next_button">Ny ursäkt</string>
    <string name="prev_button">Föregående</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="title_activity_favourite">FavouriteActivity</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_random_excuses">RandomExcusesActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_own_excuses">OwnExcusesActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_choose_rating">ChooseRatingActivity</string>
    <string name="title_activity_excuse">ExcuseActivity</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>
