<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#fff"
    tools:context="com.example.ursakter.MainActivity" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_title"
        android:textSize="25dp"
        android:gravity="center"
        android:textColor="#000"
    />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:orientation="horizontal"
    >

        <Button
            android:text="@string/favBtn_text"
            style="@style/MenuButtons"
        />
        <Button
            android:text="@string/catBtn_text"
            style="@style/MenuButtons"

        />
        <Button
            android:text="@string/addBtn_text"
            style="@style/MenuButtons"
        />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:orientation="horizontal"
        >

        <Button
            style="@style/MenuButtons"
            />
        <Button
            android:text="@string/setBtn_text"
            style="@style/MenuButtons"
            />
        <Button
            android:text="@string/aboutBtn_text"
            style="@style/MenuButtons"
            />

    </LinearLayout>

    <Button
        android:id="@+id/randomizeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:onClick="sendMessage"
        android:text="@string/main_button"
        android:padding="30dp"
        android:textSize="30dp"
        android:background="#1c3"
    />
</LinearLayout>